# multi_agent_decision_support_system

./: .env.example  .gitignore  CITATION.cff  COMPASS_demo.ipynb  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: launch.json
docker/: .dockerignore  Dockerfile  Dockerfile.full  README.md  entrypoint.sh  requirements.ui.txt
src/tests/: test_annotated_validation_core.py  test_anomaly_and_critic_guardrails.py  test_aomic_validation_protocol.py  test_communicator_manual_mode.py  test_communicator_prompt.py  test_critic.py  test_embedding_store.py  test_executor_coverage_ledger.py  test_fusion_processed_raw_inclusion.py  test_fusion_processed_subtrees.py  test_generalized_task_checklist.py  test_hf_catalog_endpoints.py  test_hierarchical_deviation_score_schema.py  test_integrator_chunk_evidence.py  test_main_attempt_selection.py  test_openneuro_batch_report.py  test_openrouter_backend.py  test_openrouter_models_endpoint.py  test_orchestrator_plan_normalization.py  test_participant_resolver.py  test_path_utils.py  test_plan_executor_inline_paths.py  test_plan_executor_narrative_fallback.py  test_prediction_label_flow.py  test_prediction_task_spec.py  test_predictor_chunk_evidence_required.py  test_predictor_input_assembler_ordering.py  test_predictor_input_chunking_policy.py  test_predictor_input_schema.py  test_predictor_regression_output_mapping.py  test_predictor_two_pass_coverage.py  test_rag_scoring.py  test_runtime_instruction_and_report_modes.py  test_subtree_extraction_flat.py  test_ui_stage_mapping.py  test_xai_integration.py
validation/: README.md  validation_with_openneuro_datasets.ipynb
validation/AOMIC_ID1000/: README.md
validation/common/: __init__.py  batch_report.py  compass_writer.py  connectome.py  deviation.py  evaluation.py  explore.py  freesurfer.py  full_validation_analysis.py  ingest.py  llm.py  manifest.py  nb_bootstrap.py  ontology.py  openneuro_full_inputs.py  tiers.py  viewer.py
validation/datasets/: validation_with_openneuro_datasets.ipynb
(+13749 files in other folders)
