[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "compass-engine"
version = "1.0.0"
description = "Clinical ontology-driven multimodal predictive agentic decision support engine."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Stijn Van Severen", email = "stijn.vanseveren@gmail.com" },
]
keywords = [
    "clinical decision support",

    "deep phenotyping",
    "explainable ai",
    "large language models",
    "multimodal learning",
    "multi-agent systems",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/stvsever/multi_agent_decision_support_system"
Repository = "https://github.com/stvsever/multi_agent_decision_support_system"
Issues = "https://github.com/stvsever/multi_agent_decision_support_system/issues"

[project.scripts]
compass = "main:main"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.tests*"]
namespaces = false

[tool.setuptools.package-data]
"src.full_stack.backend.agents" = ["prompts/*.txt"]
"src.full_stack.backend.tools" = ["prompts/*.txt"]
"src.full_stack.frontend" = ["static/*.js", "templates/*.html"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "-q"
